# Vacancies_via_API

./: config.py  main.py  pyproject.toml  readme.md  text.py
cache/: cache_hhru.json  cache_hhru_vacancy.json  cache_hhru_vacancy_cut_result.json  cache_hhru_vacancy_del_result.json  cache_sjru.json  cache_sjru_vacancy.json  cache_sjru_vacancy_cut_result.json  cache_sjru_vacancy_del_result.json
src/api_work/: abc_web_api.py  hhru_api.py  sjru_api.py
src/data_work/: abc_work_with_data.py  work_with_json.py
src/data_work/mixin_for_json/: remove_double_spaces_from_json.py  remove_html_tags_from_json.py
src/interface/: interface_console.py  main_console.py
src/tests/: test_abc_web_api.py  test_work_with_json.py
src/tests/tests_api_work/: test_abc_web_api.py  test_hhru_api.py  test_sjru_api.py
src/tests/tests_data_work/: test_abc_work_with_data.py
src/tests/tests_vacancy/: test_abc_vacancy.py  test_hhru_vacancy.py  test_sjru_vacancy.py
src/vacancy/: abc_vacancy.py  hhru_vacancy.py  sjru_vacancy.py
src/vacancy/mixin_for_vacancy/: mixin_comparison_vacancy.py  mixin_repr_vacancy.py  mixin_save_data_about_vacancy.py
src/vacancy/verification_attr/: attr_verify.py  city_verify.py  description_verify.py  name_verify.py  salary_verify.py  url_verify.py
src/work_with_vacancies/: abc_work_with_vacancies.py  work_with_vacancies_hhru.py  work_with_vacancies_sjru.py
src/work_with_vacancies/mixin_for_vacancies/: mixin_delete_cut_n_vacancies.py  mixin_print_data_vacancies.py  mixin_save_data_vacancies.py
