[tool.poetry]
name = "vacancies-via-api"
version = "0.1.0"
description = ""
authors = ["Dmitriy Frolov <dmitriy.a.frolov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
